# Botnet

./: .gitignore  Bot.cpp  Bot.h  Bot1.cpp  Bot1.h  CMakeLists.txt  README  SimpleBot.cpp  SimpleBot.h  client.c  config.txt  curlGames.cpp  curlGames.h  gui.py  log  main.cpp  response  server.c
attack_bot/: Session.cpp  Session.h  SimpleBot.cpp  SimpleBot.h  main.cpp
communication-bot_server/: RAEDME  README  bot.c  client.c  client.cpp  conf.txt  makefile  server.c  server.cpp
gui/: CppException.py  gui.py  server_run.py
gui/templates/: good.html  main.html
